--- a/donation/templates/receipts/receipt_message.html
+++ b/donation/templates/receipts/receipt_message.html
@@ -5,6 +5,12 @@
     Thank you so much for your donation to Effective Altruism Australia, designated for {{ pledge.partner_charity_str }}.
     We confirm that we received the sum of ${{ transaction.amount }} on {{ date_str }}. Please find attached your
     receipt.
+    {% if pledge.recurring and pledge.paid_by_card %}
+    <br/><br/>
+    <p>
+      To cancel your donation or update your credit card details, please do so here. {{ pledge.donor_portal }}
+    </p>
+    {% endif %}
 <br/><br/>
     For your convenience, we will also send you an end of financial year receipt by {{ eofy_receipt_date }}. Please feel
     welcome to reply to this address if you have any questions or thoughts and one of our volunteers will get back to
