Parameterise bank details

--- a/donation/templates/bank_transfer_instructions.html
+++ b/donation/templates/bank_transfer_instructions.html
@@ -11,8 +11,8 @@
 {% else %}making a bank transfer of {% endif %}
     <strong>${{ pledge.amount }}</strong> to:<br><br>
     <strong>Account Name: </strong>Effective Altruism Australia (don't worry if it doesn't fit)<br>
-    <strong>BSB:</strong> 083170<br>
-    <strong>Account No:</strong> 306556167<br>
+    <strong>BSB:</strong> {{ pledge.bsb }}<br>
+    <strong>Account No:</strong> {{ pledge.account_number }}<br>
     <strong>Unique Reference Number:</strong> {{ pledge.reference }}
 
     <p>Please reply to this email if you have any questions and we'll get back to you as soon as we can.</p>
