--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -217,7 +217,7 @@
                 <table cellpadding="0" cellspacing="0" class="es-header" align="center"
                        style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:transparent;background-repeat:repeat;background-position:center top;">
                     <tr style="border-collapse:collapse;">
-                        <td align="center" bgcolor="#333333" style="padding:0;Margin:0;background-color:#333333;">
+                        <td align="center" bgcolor="#333333" style="padding:0;Margin:0;background-color:#b3a8a8;">
                             <table class="es-header-body" align="center" cellpadding="0"
                                    cellspacing="0" width="600" bgcolor="transparent"
                                    style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;">
@@ -247,7 +247,7 @@
                                                                     href="https://effectivealtruism.org.au"
                                                                     target="_blank"
                                                                     style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
-                                                                    src="https://effectivealtruism.org.au/wp-content/themes/eaa-theme/images/ea_au_logo.png"
+                                                                    src="https://effectivealtruism.org.au/wp-content/uploads/2021/01/Effective-Altruism-Australia-Logo.svg"
                                                                     alt="Effective Altruism Australia" width="560"
                                                                     style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                     title="Effective Altruism Australia"
