--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -244,7 +244,7 @@
                                                         </tr>
                                                         <tr style="border-collapse:collapse;">
                                                             <td align="center" style="padding:0;Margin:0;"><a
-                                                                    href="https://effectivealtruism.org.au"
+                                                                    href="https://effectivealtruism.org.au/wp-content/uploads/2021/01/Effective-Altruism-Australia-Logo.svg"
                                                                     target="_blank"
                                                                     style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
                                                                     src="https://effectivealtruism.org.au/wp-content/uploads/2021/01/Effective-Altruism-Australia-Logo.svg"
