--- a/react/apps/donation_form/main.css
+++ b/react/apps/donation_form/main.css
@@ -80,6 +80,7 @@ input[type="radio"]:checked + label {
 .donation-form input[type="radio"]:checked + label {
     background-color: #4c8fb1;
     border-color: #adadad;
+    color: white;
 }
 
 .donation-amount-group input:first-child + label {
