Refactor eofy receipts for EAaE

--- a/donation/templates/receipts/eofy_receipt_message.html
+++ b/donation/templates/receipts/eofy_receipt_message.html
@@ -2,11 +2,19 @@
 {% block content %}
 Dear {{ first_name }},
 <br/><br/>
+{% if is_eaae %}
+Thank you so much for your support of Effective Altruism Australia Environment. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
+{% else %}
 Thank you so much for your support of Effective Altruism Australia. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
+{% endif %}
 <br/><br/>
 Please feel welcome to reply to this address if you have any questions or thoughts and one of our volunteers will get back to you as soon as they can.
 <br/><br/>
 Best wishes,
 <br/><br/>
+{% if is_eaae %}
+Effective Altruism Australia Environment
+{% else %}
 Effective Altruism Australia
+{% endif %}
 {% endblock content %}
