--- a/donation/templates/receipts/receipt_base.html
+++ b/donation/templates/receipts/receipt_base.html
@@ -243,7 +243,7 @@
         </div>
         <div class="header-text col-3-12">
           <p class="header_text">
-            ABN: {{ pledge.abn }}</br>
+            ABN: {{ abn }}</br>
             PO Box 2109<br>
             Templestowe Lower, VIC 3107<br>
             Australia
@@ -270,7 +270,7 @@
           {% if is_eaae %}
 Thank you for your gift representing a donation to the EAA Environment Public Fund. The EAA Environment Public Fund is a public fund listed on the Register of Environmental Organisations under item 6.1.1 of subsection 30-55(1) of the Income Tax Assessment Act 1997. Donations of $2 or more are tax deductible in Australia.
 {% else %}
-Effective Altruism Australia (ABN {{ pledge.abn }}) is a Public Benevolent Institution endorsed as a Deductible Gift Recipient by the Australian Taxation Office. Donations of $2 or more are tax deductible in Australia.
+Effective Altruism Australia (ABN {{ abn }}) is a Public Benevolent Institution endorsed as a Deductible Gift Recipient by the Australian Taxation Office. Donations of $2 or more are tax deductible in Australia.
 {% endif %}
         </p>
       </div>
