EAAE EOFY email tweaks

--- a/donation/templates/impact.html
+++ b/donation/templates/impact.html
@@ -419,7 +419,7 @@ img.result__icon{
       </article>
       <article class="disclaimer__section">
         <h1 class="disclaimer__section__heading">Acknowledgements</h1>
-        <p>Thank you to everyone at <a href="https://www.thelifeyoucansave.org/">The Life You Can Save</a>, <a href="http://www.rhokaustralia.org/">Random Hacks of Kindness</a>, and all the volunteers who spent countless hours making this calculator function. This wouldn't be possible without you; thank you!</p>
+        <p>Thank you to everyone at <a href="https://www.thelifeyoucansave.org/">The Life You Can Save</a>, <a href="http://www.rhokaustralia.org/">Random Hacks of Kindness</a>, and all the team members who spent countless hours making this calculator function. This wouldn't be possible without you; thank you!</p>
       </article>
     </div>
   </section>
