--- a/donation/templates/receipts/receipt_message.html
+++ b/donation/templates/receipts/receipt_message.html
@@ -11,7 +11,7 @@
     {% endif %}
 <br/><br/>
     For your convenience, we will also send you an end of financial year receipt by {{ eofy_receipt_date }}. Please feel
-    welcome to reply to this address if you have any questions or thoughts and one of our volunteers will get back to
+    welcome to reply to this address if you have any questions or thoughts and one of our team members will get back to
     you as soon as they can.
 <br/><br/>
     Best wishes,
