--- a/donation/templates/receipts/eofy_receipt_page_1.html
+++ b/donation/templates/receipts/eofy_receipt_page_1.html
@@ -3,9 +3,9 @@
   <h2>End of Financial Year Donation Receipt</h2>
   <p>
 {% if is_eaae %}
-This receipt lists the donations received from you by Effective Altruism Australia Environment during the {{ two_digit_year|add:"-1" }}&ndash;{{ two_digit_year }} financial year. This receipt is provided for your convenience &ndash; we have separately sent receipts for each of your donations at the time they were received. On behalf of everyone you're helping, we thank you for your gift(s).
+This receipt lists the donations received from you by Effective Altruism Australia Environment Limited during the {{ two_digit_year|add:"-1" }}&ndash;{{ two_digit_year }} financial year. This receipt is provided for your convenience &ndash; we have separately sent receipts for each of your donations at the time they were received. On behalf of everyone you're helping, we thank you for your gift(s).
 {% else %}
-This receipt lists the donations received from you by Effective Altruism Australia during the {{ two_digit_year|add:"-1" }}&ndash;{{ two_digit_year }} financial year. This receipt is provided for your convenience &ndash; we have separately sent receipts for each of your donations at the time they were received. On behalf of everyone you're helping, we thank you for your gift(s).
+This receipt lists the donations received from you by Effective Altruism Australia Limited during the {{ two_digit_year|add:"-1" }}&ndash;{{ two_digit_year }} financial year. This receipt is provided for your convenience &ndash; we have separately sent receipts for each of your donations at the time they were received. On behalf of everyone you're helping, we thank you for your gift(s).
     {% endif %}
   </p>
   <br/>
