--- a/donation/templates/receipts/eofy_receipt_message.html
+++ b/donation/templates/receipts/eofy_receipt_message.html
@@ -3,9 +3,9 @@
 Dear {{ first_name }},
 <br/><br/>
 {% if is_eaae %}
-Thank you so much for your support of Effective Altruism Australia Environment. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
+Thank you so much for your support of Effective Altruism Australia Environment Limited. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
 {% else %}
-Thank you so much for your support of Effective Altruism Australia. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
+Thank you so much for your support of Effective Altruism Australia Limited. Please find attached a receipt for all donations received during the {{ two_digit_year|add:"-1" }}-{{ two_digit_year }} financial year.
 {% endif %}
 <br/><br/>
 Please feel welcome to reply to this address if you have any questions or thoughts and one of our team members will get back to you as soon as they can.
@@ -13,8 +13,8 @@ Please feel welcome to reply to this address if you have any questions or though
 Best wishes,
 <br/><br/>
 {% if is_eaae %}
-Effective Altruism Australia Environment
+Effective Altruism Australia Environment Limited
 {% else %}
-Effective Altruism Australia
+Effective Altruism Australia Limited
 {% endif %}
 {% endblock content %}
