--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -245,10 +245,10 @@
                                                         <tr style="border-collapse:collapse;">
                                                             {% if is_eaae %}
                                                             <td align="center" style="padding:0;Margin:0;"><a
-                                                                href="https://donations.effectivealtruism.com.au/static/thumbnails/logo_eaae.png"
+                                                                href="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaae.png"
                                                                 target="_blank"
                                                                 style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
-                                                                src="https://donations.effectivealtruism.com.au/static/thumbnails/logo_eaae.png"
+                                                                src="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaae.png"
                                                                 alt="Effective Altruism Australia Environment" width="560"
                                                                 style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                 title="Effective Altruism Australia Environment"
