--- a/donation/templates/receipts/receipt_base.html
+++ b/donation/templates/receipts/receipt_base.html
@@ -272,7 +272,7 @@
         <hr>
         <p>
           {% if is_eaae %}
-Thank you for your gift representing a donation to the EAA Environment Public Fund. The EAA Environment Public Fund is a public fund listed on the Register of Environmental Organisations under item 6.1.1 of subsection 30-55(1) of the Income Tax Assessment Act 1997. Donations of $2 or more are tax deductible in Australia.
+Effective Altruism Australia Environment Limited (ABN 57 659 447 417) is a Charity endorsed as a Deductible Gift Recipient by the Australian Taxation Office. Donations of $2 or more are tax deductible in Australia.
 {% else %}
 Effective Altruism Australia Limited (ABN {{ abn }}) is a Public Benevolent Institution endorsed as a Deductible Gift Recipient by the Australian Taxation Office. Donations of $2 or more are tax deductible in Australia.
 {% endif %}
