--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -217,13 +217,13 @@
                 <table cellpadding="0" cellspacing="0" class="es-header" align="center"
                        style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:transparent;background-repeat:repeat;background-position:center top;">
                     <tr style="border-collapse:collapse;">
-                        <td align="center" bgcolor="#333333" style="padding:0;Margin:0;background-color:#b3a8a8;">
+                        <td align="center" bgcolor="#f6f6f6" style="padding:0;Margin:0;background-color:#f6f6f6;">
                             <table class="es-header-body" align="center" cellpadding="0"
                                    cellspacing="0" width="600" bgcolor="transparent"
                                    style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;">
                                 <tr style="border-collapse:collapse;">
                                     <td align="left"
-                                        style="padding:0;Margin:0;padding-bottom:20px;padding-left:20px;padding-right:20px;">
+                                        style="Margin:0;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
                                         <table cellpadding="0" cellspacing="0" width="100%"
                                                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
                                             <tr style="border-collapse:collapse;">
@@ -244,22 +244,22 @@
                                                         </tr>
                                                         <tr style="border-collapse:collapse;">
                                                             {% if is_eaae %}
-                                                            <td align="center" style="padding:0;Margin:0;"><a
+                                                            <td style="padding:0;Margin:0;"><a
                                                                 href="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaae.png"
                                                                 target="_blank"
                                                                 style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
                                                                 src="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaae.png"
-                                                                alt="Effective Altruism Australia Environment" width="560"
+                                                                alt="Effective Altruism Australia Environment" width="300"
                                                                 style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                 title="Effective Altruism Australia Environment"
                                                                 class="adapt-img"></a></td>
                                                                 {% else %}
-                                                            <td align="center" style="padding:0;Margin:0;"><a
-                                                                    href="https://effectivealtruism.org.au/wp-content/uploads/2021/01/Effective-Altruism-Australia-Logo.svg"
+                                                            <td style="padding:0;Margin:0;"><a
+                                                                    href="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
                                                                     target="_blank"
                                                                     style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
-                                                                    src="https://effectivealtruism.org.au/wp-content/uploads/2021/01/Effective-Altruism-Australia-Logo.svg"
-                                                                    alt="Effective Altruism Australia" width="560"
+                                                                    src="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
+                                                                    alt="Effective Altruism Australia" width="300"
                                                                     style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                     title="Effective Altruism Australia"
                                                                     class="adapt-img"></a></td>
@@ -394,7 +394,7 @@
                                                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
                                                         <tr style="border-collapse:collapse;">
                                                             <td align="center" bgcolor="#f6f6f6"
-                                                                style="padding:0;Margin:0;"><p
+                                                                style="padding:0;padding-bottom:20px;Margin:0;"><p
                                                                     style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:12px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;color:#696969;">
                                                                 {% block abovefooter %}
                                                                 {% endblock abovefooter %}
