--- a/donation/templates/receipts/eofy_receipt_page_1.html
+++ b/donation/templates/receipts/eofy_receipt_page_1.html
@@ -22,4 +22,9 @@ This receipt lists the donations received from you by Effective Altruism Austral
       If you also made donations via cheque or via a workplace giving program, those donations are not listed on this receipt.</br>
       If you made donations from multiple email addresses, you'll receive a separate EOFY receipt at each email address.</p>
   </div>
+  <hr/>
+  <h3>Donating in late June?</h3>
+  <p>
+      Please note that according to the <a href="https://www.ato.gov.au/individuals-and-families/income-deductions-offsets-and-records/deductions-you-can-claim/gifts-and-donations">Australian Taxation Office (ATO)</a>, your donation is deductible for the financial year in which it was made, which is when the funds cleared <b><i>your</i></b> bank account. Therefore, if you made your donation by <b><i>midnight 30 June</i></b>, it is deductible for that financial year, even if our receipt is dated in early July (when we receive the funds). Additionally, if you are otherwise eligible for our June match campaign, your donation will be matched as long as it was made by <b><i>midnight 30 June 2024</i></b>. 
+  </p>
 {% endblock above_footer %}
