--- a/frontend/src/styles/utilities.css
+++ b/frontend/src/styles/utilities.css
@@ -1,17 +1,3 @@
-/*
-  These are a bunch of CSS utility classes.
- */
-
-/* Animations */
-* {
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-  box-sizing: border-box;
-}
-
 /* Width */
 .w-full {
   width: 100%;
@@ -58,7 +44,7 @@
 .border {
   border-style: solid;
   border-width: 1px;
-  border-color: var(--eaa-blue-300);
+  border-color: var(--eaa-blue-600);
 }
 .border-none {
   border: none;
@@ -88,6 +74,9 @@
 .items-start {
   align-items: flex-start;
 }
+.items-end {
+  align-items: flex-end;
+}
 .self-stretch {
   align-self: stretch;
 }
@@ -108,30 +97,18 @@
   color: white;
 }
 .text-blue {
-  color: var(--eaa-blue-500);
+  color: var(--eaa-blue-700);
 }
 
-/* Border radius */
-.rounded-sm {
-  border-radius: 0.125rem;
-}
+/* Border rounding */
 .rounded {
-  border-radius: 0.25rem;
-}
-.rounded-md {
-  border-radius: 0.375rem;
+  border-radius: 0.125rem;
 }
 
 /* Display */
 .inline-block {
   display: inline-block;
 }
-
 .block {
   display: block;
-}
-
-/* Misc */
-cursor-pointer {
-  cursor: pointer;
 }
