--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -45,12 +45,12 @@ fieldset {
 }
 
 /* Form Validation - shows tick or alert badges based on validity of input */
-.validate input:user-valid {
+.validate input:user-valid, input:user-valid.validate {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 12 12'><path d='M6 0a6 6 0 1 0 6 6 6 6 0 0 0-6-6zm-.5 8.5L3 5.85l.7-.71 1.79 1.86L8.77 3.5 9.5 4.2z' fill='%2336B075'/></svg>");
   background-repeat: no-repeat;
   background-position: center right 0.5rem;
 }
-.validate input:user-invalid {
+.validate input:user-invalid, input:user-invalid.validate {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 12 12'><path d='M6 12a6 6 0 100-12 6 6 0 000 12zm0-4.8a.45.45 0 01-.45-.45V3.45a.45.45 0 01.9 0v3.3A.45.45 0 016 7.2zm-.002 1.8a.6.6 0 110-1.2.6.6 0 010 1.2z' fill='%23FFB800'/></svg>");
   background-repeat: no-repeat;
   background-position: center right 0.5rem;
