--- a/donation/templates/receipts/receipt_base.html
+++ b/donation/templates/receipts/receipt_base.html
@@ -248,8 +248,8 @@
         <div class="header-text col-3-12">
           <p class="header_text">
             ABN: {{ abn }}</br>
-            PO Box 2109<br>
-            Templestowe Lower, VIC 3107<br>
+            PO Box 550<br>
+            Doncaster, Victoria 3108<br>
             Australia
           </p>
         </div>
