Update donation form show/hide, errors and style

--- a/frontend/src/styles/utilities.css
+++ b/frontend/src/styles/utilities.css
@@ -19,6 +19,10 @@
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -113,8 +117,12 @@
 }
 
 /* Border rounding */
-.rounded {
-  border-radius: 4rem;
+.rounded-sm {
+  border-radius: 0.25rem;
+}
+
+.rounded-full {
+  border-radius: calc(infinity * 1px);
 }
 
 /* Display */
