--- a/frontend/src/styles/custom-inputs.css
+++ b/frontend/src/styles/custom-inputs.css
@@ -27,7 +27,7 @@ input[type="number"] {
 .radio-group input[type="radio"] + label {
   flex-grow: 1;
   flex-basis: 0;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   border: 1px solid var(--eaa-blue-600);
   text-align: center;
 }
@@ -108,5 +108,5 @@ input[type="number"] {
 .eaa-checkbox:focus-within .checkmark {
   outline: 2px solid var(--eaa-blue-600);
   outline-offset: 2px;
-  border-radius: 1px;
+  border-radius: 0.25rem;
 }
