Update logos These previously linked to images on the old site which has been removed

--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -255,10 +255,10 @@
                                                                 class="adapt-img"></a></td>
                                                                 {% else %}
                                                             <td style="padding:0;Margin:0;"><a
-                                                                    href="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
+                                                                    href="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaa.png"
                                                                     target="_blank"
                                                                     style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
-                                                                    src="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
+                                                                    src="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaa.png"
                                                                     alt="Effective Altruism Australia" width="300"
                                                                     style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                     title="Effective Altruism Australia"
