Fix and update emails and receipts

--- a/donation/templates/email_base.html
+++ b/donation/templates/email_base.html
@@ -223,7 +223,7 @@
                                    style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;">
                                 <tr style="border-collapse:collapse;">
                                     <td align="left"
-                                        style="Margin:0;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
+                                        style="Margin:0;padding-top:20px;padding-left:20px;padding-right:20px;">
                                         <table cellpadding="0" cellspacing="0" width="100%"
                                                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;">
                                             <tr style="border-collapse:collapse;">
@@ -249,17 +249,17 @@
                                                                 target="_blank"
                                                                 style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
                                                                 src="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaae.png"
-                                                                alt="Effective Altruism Australia Environment" width="300"
+                                                                alt="Effective Altruism Australia Environment" width="200"
                                                                 style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                 title="Effective Altruism Australia Environment"
                                                                 class="adapt-img"></a></td>
                                                                 {% else %}
                                                             <td style="padding:0;Margin:0;"><a
-                                                                    href="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
+                                                                    href="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaa.png"
                                                                     target="_blank"
                                                                     style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:14px;text-decoration:underline;color:#1376C8;"><img
-                                                                    src="https://effectivealtruism.org.au/wp-content/uploads/2024/02/Effective-Altruism-Australia-Logo.png"
-                                                                    alt="Effective Altruism Australia" width="300"
+                                                                    src="https://donations.effectivealtruism.org.au/static/thumbnails/logo_eaa.png"
+                                                                    alt="Effective Altruism Australia" width="200"
                                                                     style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;"
                                                                     title="Effective Altruism Australia"
                                                                     class="adapt-img"></a></td>
