--- a/donation/templates/receipts/eofy_receipt_page_1.html
+++ b/donation/templates/receipts/eofy_receipt_page_1.html
@@ -16,10 +16,13 @@ This receipt lists the donations received from you by Effective Altruism Austral
   <p><b>Total Donation Amount</b>: ${{ total_amount }}</p>
 {% endblock content %}
 {% block above_footer %}
-  <div style="margin-bottom: 40px;">
+  <div>
     <h4>Notes</h4>
-    <p style="margin-top: -10px;">
-      If you also made donations via cheque or via a workplace giving program, those donations are not listed on this receipt.</br>
-      If you made donations from multiple email addresses, you'll receive a separate EOFY receipt at each email address.</p>
+    <p>
+      If you also made donations via cheque or via a workplace giving program, those donations are not listed on this receipt.
+    </p>
+    <p>
+      If you made donations from multiple email addresses, you'll receive a separate EOFY receipt at each email address.
+    </p>
   </div>
 {% endblock above_footer %}
